Fix/attempt2 (#1)
* feat: add dockerfile and docker compose

* feature: add ci to project

* feat: add design patterns documents

* test CI

* feat: add continious api documentation

* fix: add region data to request detail

* chore: organize docs

* fix: bring the region information to request domain

* change CI to check

* feat: add send status change sms worker job

* test CD of github

* change proxy for downloading

* check caching and executable flags

* rework the deployment

* fix the path

* change the permission

* feat: implement CD via github action

* feat: add CI via github actions

* fix: fix the default branch name
