# API-Document/openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: WTF Backend API
-  version: 1.0.0
+  version: 1.0.2
   description: API documentation generated from the Go chi router and HTTP handlers.
 servers:
   - url: http://localhost:8080
@@ -584,6 +584,8 @@ components:
       required:
         - id
         - region_id
+        - region_name_fa
+        - region_name_en
         - need_type
         - quantity
         - status
@@ -596,6 +598,10 @@ components:
         region_id:
           type: string
           format: uuid
+        region_name_fa:
+          type: string
+        region_name_en:
+          type: string
         need_type:
           $ref: "#/components/schemas/NeedType"
         quantity:
